# jgirvin_blog_ocaml

./: .editorconfig  .gitignore  .ocamlformat  Dockerfile  NEW_TAGS_PLAN.md  README.md  dune-project  jgirvin_blog.opam
.github/workflows/: docker.yml
example/pages/: index.liquid
example/posts/: hello-world.md
example/templates/: archive.liquid  feed.xml.liquid  index.liquid  post.liquid  sitemap.xml.liquid  tags.liquid  test.liquid
lib/: dune  jgirvin_blog.ml  jgirvin_blog.mli
test/: dune  test_jgirvin_blog.ml
